Fix horizontal scroll in docs on mobile

--- a/docs/components/MdxPageHeader/MdxPageHeader.module.css
+++ b/docs/components/MdxPageHeader/MdxPageHeader.module.css
@@ -41,6 +41,10 @@
   font-weight: 900;
   font-family: var(--docs-font-primary);
 
+  @media (max-width: $docs-mdx-breakpoint) {
+    font-size: rem(32px);
+  }
+
   @mixin light {
     color: var(--mantine-color-black);
   }
